5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1708_3032.log
== TEST (2019-04-29 15:45:19) 
-- CODE:
x = float(input("digite o valor de x:"))

abs()
if (x == 0) or ( x<=0 ):
	(f(x) = 0)
	print(f(x))
-- ERROR:
File "XXXX", line 5
    (f(x) = 0)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:30) 
-- CODE:
x = float(input("digite o valor de x:"))

abs()
if (x == 0) or ( x<=0 ):
	(f(x) == 0)
	print(f(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    abs()
TypeError: abs() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
